# libchat

./: .gitignore  .gitmodules  Cargo.toml  README.md  align_logs.py  double_ratchet.h  flake.nix  justfile  normalize_logs.py  process_logs.sh
.cargo/: config.toml
.github/scripts/: mock-registry.py
.github/workflows/: ci.yml
chat-cli/: Cargo.toml  README.md
chat-cli/src/: app.rs  main.rs  transport.rs  ui.rs
chat_crates/client/: Cargo.toml
conversations/: Cargo.toml
conversations/examples/: chat_session.rs  persist_chat.rs  persistent_chat.rs  ping_pong.rs
conversations/src/: api.rs  chat.rs  common.rs  context.rs  conversation.rs  crypto.rs  errors.rs  identity.rs  inbox.rs  keystore.rs  lib.rs  proto.rs  types.rs  utils.rs
conversations/src/conversation/: common.rs  group_test.rs  groupv1.rs  mod.rs  privatev1.rs
conversations/src/conversation/groupv1/: frames.rs
conversations/src/dm/: mod.rs  privatev1.rs
conversations/src/ffi/: api.rs  context.rs  mod.rs  utils.rs
conversations/src/group/: mod.rs
conversations/src/inbox/: encryption.rs  handler.rs  handshake.rs  inbox.rs  introduction.rs  mod.rs
conversations/src/storage/: db.rs  migrations.rs  mod.rs  session.rs  types.rs
conversations/src/storage/migrations/: 001_initial_schema.sql  002_ephemeral_keys.sql  003_conversations.sql
core/: README.md
core/account/: Cargo.toml  README.md
core/chat-sqlite/: Cargo.toml
core/conversations/: Cargo.toml
core/conversations/src/: account.rs  account_directory.rs  account_service.rs  api.rs  causal_history.rs  context.rs  conversation.rs  core.rs  ctx.rs  errors.rs  event.rs  external_traits.rs  identity.rs  inbound.rs  inbox.rs  inbox_v2.rs  lib.rs  outcomes.rs  proto.rs  response.rs  service_context.rs  service_traits.rs  sqlite.rs  storage.rs  store.rs  test_utils.rs  types.rs  utils.rs
core/conversations/src/conversation/: demls_group_v1.rs  direct_v1.rs  group_cent_info.rs  group_test.rs  group_v1.rs  group_v2.rs  mls_extensions.rs  privatev1.rs  privatev2.rs
core/conversations/src/inbox/: handler.rs  handshake.rs  introduction.rs
core/conversations/src/inbox_v2/: identity.rs  mls_provider.rs
core/conversations/src/sqlite/: types.rs
core/conversations/src/sqlite/migrations/: 001_initial_schema.sql
core/conversations/src/storage/: migrations.rs  mod.rs  types.rs
core/conversations/src/storage/migrations/: 001_initial_schema.sql
core/conversations/src/store/: conversations.rs  ephemeral_keys.rs  identity.rs
core/core_client/: Cargo.toml
core/core_client/src/: conversation.rs  core_client.rs  errors.rs  inbox_v2.rs  lib.rs  utils.rs
core/core_client/src/conversation/: group_v1.rs  group_v2.rs
core/crypto/: Cargo.toml
core/crypto/src/: identity.rs  lib.rs  signatures.rs  x3dh.rs  xeddsa_sign.rs
core/double-ratchets/: Cargo.toml  README.md
core/double-ratchets/examples/: double_ratchet_basic.rs  out_of_order_demo.rs  serialization_demo.rs  storage_demo.rs
core/double-ratchets/src/: errors.rs  hkdf.rs  lib.rs  reader.rs  state.rs  store.rs
core/double-ratchets/src/ffi/: doubleratchet.rs  key.rs
core/double-ratchets/src/storage/: db.rs  mod.rs  session.rs  types.rs
core/double-ratchets/src/store/: ratchets.rs
core/integration_tests_core/: Cargo.toml  README.md
core/integration_tests_core/src/: lib.rs  test_client.rs  test_ident.rs  wakeup.rs
core/integration_tests_core/tests/: causal_history.rs  dev_tests.rs  mls_integration.rs  mls_persistence.rs  private_integration.rs  test_direct_v1.rs  test_group_cent_info.rs  test_group_v2.rs  test_private_v2.rs
core/logos-traits/: Cargo.toml
core/sqlite/: Cargo.toml
core/sqlite/src/: common.rs  errors.rs  lib.rs  migrations.rs  mls_storage.rs  types.rs
core/sqlite/src/migrations/: 002_ratchet_state.sql  003_mls_storage.sql
crates/client/: Cargo.toml
crates/client-ffi/: Cargo.toml
crates/client-ffi/examples/message-exchange/: Makefile  README.md
crates/client-ffi/examples/message-exchange/src/: main.c
crates/client-ffi/src/: api.rs  delivery.rs  lib.rs
crates/client/examples/message-exchange/: README.md  main.rs
crates/client/src/: builder.rs  client.rs  config.rs  delegate.rs  delivery.rs  delivery_in_process.rs  directory.rs  embedded.rs  errors.rs  event.rs  lib.rs  logos.rs  topic_handler.rs
crates/client/tests/: group_v2.rs  saro_and_raya.rs
crates/generic-chat/: Cargo.toml
crates/generic-chat/examples/message-exchange/: README.md  main.rs
crates/generic-chat/src/: builder.rs  client.rs  delivery_in_process.rs  event.rs  lib.rs
crates/generic-chat/tests/: group_v2.rs  saro_and_raya.rs
crates/logos-chat/: Cargo.toml
crates/logos-chat/src/: embedded.rs  lib.rs  logos.rs
crypto/: Cargo.toml
docs/: target-architecture.md
double-ratchets/: Cargo.toml  README.md
double-ratchets-storage/: Cargo.toml
double-ratchets-storage/src/: error.rs  lib.rs  memory.rs  persistent.rs  sqlite.rs  traits.rs  types.rs
double-ratchets/examples/: double_ratchet_basic.rs  out_of_order_demo.rs  serialization_demo.rs  storage_demo.rs
double-ratchets/ffi-nim-example/src/: ffi_nim_example.nim
double-ratchets/src/: hkdf.rs  keypair.rs  lib.rs  main.rs  reader.rs  state.rs  types.rs
double-ratchets/src/ffi/: doubleratchet.rs  key.rs  mod.rs  utils.rs
double-ratchets/src/storage/: db.rs  ephemeral.rs  errors.rs  mod.rs  ratchet_storage.rs  session.rs  sqlite.rs  store.rs  types.rs
extensions/components/: Cargo.toml  build.rs
extensions/components/src/: contact_registry.rs  delivery.rs  http_registry.rs  lib.rs  storage.rs  wakeup.rs
extensions/components/src/contact_registry/: delivery.rs  ephemeral.rs  http.rs  store.rs
extensions/components/src/delivery/: embedded_p2p_delivery.rs  local_broadcaster.rs
extensions/components/src/storage/: in_memory_store.rs
extensions/embedded-logos-delivery/: Cargo.toml  build.rs
extensions/embedded-logos-delivery/src/: lib.rs  sys.rs
nim-bindings/: README.md  bindings.nimble  conversations_example.nimble  specs
proto/: Cargo.toml  build.rs
storage/: Cargo.toml
xk0/: Cargo.toml  README.md
(+59 files in other folders)
