
[workspace]
resolver = "3"

members = [
    "bin/chat-cli",
    "bin/keypackage-registry",
    "core/account",
    "core/conversations",
    "core/crypto",
    "core/double-ratchets",
    "core/integration_tests_core",
    "core/sqlite",
    "core/storage",
    "crates/client-ffi",
    "crates/client",
    "extensions/components",
]

default-members = [
    "core/account",
    "core/conversations",
    "core/crypto",
    "core/double-ratchets",
    "core/integration_tests_core",
    "core/sqlite",
    "core/storage",
    "crates/client-ffi",
    "crates/client",
]

[workspace.dependencies]
# Internal Workspace dependency declarations (sorted)
chat-sqlite = { path = "core/sqlite" }
components = { path = "extensions/components" }
crypto = { path = "core/crypto" }
libchat = { path = "core/conversations" }
logos-chat = { path = "crates/client" }
storage = { path = "core/storage" }

# External Workspace dependency declarations (sorted)
blake2 = "0.10"

# Panicking across FFI boundaries is UB; abort is the correct strategy for a
# C FFI library.
[profile.release]
panic = "abort"
