
[workspace]
resolver = "3"

members = [
    "bin/chat-cli",
    "core/account",
    "core/conversations",
    "core/crypto",
    "core/double-ratchets",
    "core/integration_tests_core",
    "core/shared-traits",
    "core/sqlite",
    "core/storage",
    "crates/logos-chat",
    "crates/generic-chat",
    "extensions/components",
    "extensions/embedded-logos-delivery",
    "extensions/logos-delivery-rust",
]

default-members = [
    "core/account",
    "core/conversations",
    "core/crypto",
    "core/double-ratchets",
    "core/integration_tests_core",
    "core/shared-traits",
    "core/sqlite",
    "core/storage",
    "crates/generic-chat",
]

[workspace.dependencies]
# Internal Workspace dependency declarations (sorted)
logos-account = { path = "core/account" }
chat-sqlite = { path = "core/sqlite" }
components = { path = "extensions/components" }
crypto = { path = "core/crypto" }
embedded-logos-delivery = { path = "extensions/embedded-logos-delivery" }
libchat = { path = "core/conversations" }
logos-chat = { path = "crates/logos-chat" }
logos-delivery = { path = "extensions/logos-delivery-rust"}
logos-generic-chat = { path = "crates/generic-chat" }
shared-traits = { path = "core/shared-traits" }
storage = { path = "core/storage" }

# External Workspace dependency declarations (sorted)
blake2 = "0.10"
crossbeam-channel = "0.5"

# Panicking across FFI boundaries is UB; chat-cli registers Rust callbacks
# that liblogosdelivery invokes, so abort instead of unwinding.
[profile.release]
panic = "abort"
