[package]
name = "logos-chat"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"] 

[dependencies]
blake2 = "0.10"
# TODO: replace
# chat-proto = { git = "https://github.com/logos-messaging/chat_proto" }
chat-proto = { path = "../../chat_proto/gen/rust" }
crypto = { path = "../crypto" }
hex = "0.4.3"
prost = "0.14.1"
rand_core = { version = "0.6" }
thiserror = "2.0.17"
x25519-dalek = { version = "2.0.1", features = ["static_secrets", "reusable_secrets", "getrandom"] }
