[package]
name = "double-ratchets-storage"
version = "0.1.0"
edition = "2024"

[features]
default = ["sqlite"]
sqlite = ["rusqlite/bundled"]
sqlcipher = ["rusqlite/bundled-sqlcipher"]

[dependencies]
double-ratchets = { path = "../double-ratchets" }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
rusqlite = { version = "0.32", optional = true }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"
chacha20poly1305 = "0.10"
rand = "0.8"

[dev-dependencies]
tempfile = "3"
