[package]
name = "double-ratchets"
version = "0.0.1"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "generate-headers"
required-features = ["headers"]

[dependencies]
x25519-dalek = { version="2.0.1", features=["static_secrets"] }
chacha20poly1305 = "0.10.1"
rand_core = "0.6.4"
rand = "0.8.5"
hkdf = "0.12.4"
thiserror = "2"
blake2 = "0.10.6"
safer-ffi = "0.1.13"
zeroize = "1.8.2"
serde = "1.0"
rusqlite = { version = "0.35", optional = true, features = ["bundled"] }

[features]
default = []
storage = ["rusqlite"]
sqlcipher = ["storage", "rusqlite/bundled-sqlcipher-vendored-openssl"]
headers = ["safer-ffi/headers"]
