[package]
name = "libchat"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib","staticlib"]

[dependencies]
# Workspace dependencies (sorted)
blake2 = { workspace = true }

# External dependencies (sorted)
base64 = "0.22"
chat-proto = { git = "https://github.com/logos-messaging/chat_proto" }
crypto = { path = "../crypto" }
double-ratchets = { path = "../double-ratchets" }
hex = "0.4.3"
openmls = { version = "0.8.1", features = ["libcrux-provider"] }
openmls_libcrux_crypto = "0.3.1"
openmls_traits = "0.5.0"
prost = "0.14.1"
rand_core = { version = "0.6" }
safer-ffi = "0.1.13"
sqlite = { package = "chat-sqlite", path = "../sqlite" }
storage = { path = "../storage" }
thiserror = "2.0.17"
x25519-dalek = { version = "2.0.1", features = ["static_secrets", "reusable_secrets", "getrandom"] }

[dev-dependencies]
# External dependencies (sorted)
components = { package = "components", path = "../../extensions/components" }
tempfile = "3"
