[package]
name = "libchat"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[dependencies]
# Workspace dependencies (sorted)
blake2 = { workspace = true }
chat-sqlite = { workspace = true }
crypto = { workspace = true }
shared-traits = { workspace = true }
storage = { workspace = true }

# External dependencies (sorted)
alloy = "2.0"
base64 = "0.22"
chat-proto = { workspace = true }
de-mls = { git = "https://github.com/vacp2p/de-mls", rev = "2c7a8669c1492c749c02efd2c5ac45e93e4926a3"} # Expose Mls Extensions (#131)
double-ratchets = { path = "../double-ratchets" }
hashgraph-like-consensus = "0.6.0"
hex = "0.4.3"
openmls = { version = "0.8.1", features = ["libcrux-provider"] }
openmls_libcrux_crypto = "0.3.1"
openmls_memory_storage = "0.5.0"
openmls_traits = "0.5.0"
prost = "0.14.1"
rand = "0.9"
rand_core = { version = "0.6" }
thiserror = "2.0.17"
tracing = "0.1.44"
x25519-dalek = { version = "2.0.1", features = ["static_secrets", "reusable_secrets", "getrandom"] }

[dev-dependencies]
# Workspace dependencies (sorted)
components = { workspace = true }

# External dependencies (sorted)
tempfile = "3"
