[package]
name = "core_client"
version = "0.1.0"
edition = "2024"


[dependencies]
# Workspace dependencies (sorted)
blake2 = { workspace = true }
chat-sqlite = { workspace = true }
crypto = { workspace = true }
libchat = { workspace = true }
storage = { workspace = true }

# External dependencies (sorted)
alloy = "2.0.5"
chat-proto = { git = "https://github.com/logos-messaging/chat_proto", branch = "version_rollback" }
de-mls = { git = "https://github.com/vacp2p/de-mls", branch = "main" }
hashgraph-like-consensus = "0.5.1"
hex = "0.4.3"
openmls = "0.8.1"
openmls_libcrux_crypto = "0.3.1"
openmls_memory_storage = "0.5.0"
openmls_rust_crypto = "0.5.0"
openmls_traits = "0.5.0"
prost = "0.14"
rand = "0.9"
thiserror = "2.0.18"
tracing = "0.1.44"
