[package]
name = "crypto"
version = "0.1.0"
edition = "2024"

[dependencies]
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
hkdf = "0.12"
sha2 = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
ed25519-dalek = "2.2.0"
xeddsa = "1.0.2"
zeroize = {version = "1.8.2", features= ["derive"]}
generic-array = "1.3.5"
thiserror = "2"
