[package]
name = "double-ratchets"
version = "0.0.1"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
x25519-dalek = { version="2.0.1", features=["static_secrets"] }
chacha20poly1305 = "0.10.1"
rand_core = "0.6.4"
rand = "0.9.3"
hkdf = "0.12.4"
thiserror = "2"
blake2 = "0.10.6"
zeroize = "1.8.2"
storage = { workspace = true }
serde = "1.0"

[dev-dependencies]
sqlite = { package = "chat-sqlite", path = "../sqlite" }
tempfile = "3"
