[package]
name = "double-ratchets"
version = "0.0.1"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
# Workspace dependencies (sorted)
storage = { workspace = true }

# External dependencies (sorted)
blake2 = "0.10.6"
chacha20poly1305 = "0.10.1"
hkdf = "0.12.4"
rand = "0.9.3"
rand_core = "0.6.4"
serde = "1.0"
thiserror = "2"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
zeroize = "1.8.2"

[dev-dependencies]
# Workspace dependencies (sorted)
sqlite = { workspace = true }

# External dependencies (sorted)
tempfile = "3"
