[package]
name = "integration_tests_core"
version = "0.1.0"
edition = "2024"

# [[test]]
# name = "integration_tests_core"

[dev-dependencies]
# Workspace dependencies (sorted)
chat-sqlite = { workspace = true }
components = { workspace = true }
libchat = { workspace = true }
logos-account = { workspace = true , features = ["dev"]}
storage = { workspace = true }

# External dependencies (sorted)
tempfile = "3"
