[package]
name = "integration_tests_core"
version = "0.1.0"
edition = "2024"

# [[test]]
# name = "integration_tests_core"

[dependencies]
# Workspace dependencies (sorted)
chat-sqlite = { workspace = true }
components = { workspace = true }
crypto = { workspace = true }
libchat = { workspace = true }
shared-traits = { workspace = true }

# External dependencies (sorted)
tracing = "0.1"

[dev-dependencies]
chat-sqlite = { workspace = true }
storage = { workspace = true }

# External dependencies (sorted)
tempfile = "3"
tracing = "0.1.44"
tracing-subscriber = "0.3"
