[package]
name = "chat-sqlite"
version = "0.1.0"
edition = "2024"
description = "SQLite storage implementation for libchat"

[dependencies]
# External dependencies (sorted)
crypto = { path = "../crypto" }
hex = "0.4.3"
rusqlite = { version = "0.35", features = ["bundled-sqlcipher-vendored-openssl"] }
storage = { path = "../storage" }
zeroize = { version = "1.8.2", features = ["derive"] }

[dev-dependencies]
# External dependencies (sorted)
tempfile = "3"
