[package]
name = "chat-sqlite"
version = "0.1.0"
edition = "2024"
description = "SQLite storage implementation for libchat"

[dependencies]
# Workspace dependencies (sorted)
crypto = { workspace = true }
storage = { workspace = true }

# External dependencies (sorted)
hex = "0.4.3"
rusqlite = { version = "0.35", features = ["bundled-sqlcipher-vendored-openssl"] }
zeroize = { version = "1.8.2", features = ["derive"] }

[dev-dependencies]
# External dependencies (sorted)
tempfile = "3"
