[package]
name = "chat-sqlite"
version = "0.1.0"
edition = "2024"
description = "SQLite storage implementation for libchat"

[dependencies]
# Workspace dependencies (sorted)
crypto = { workspace = true }
storage = { workspace = true }

# External dependencies (sorted)
hex = "0.4.3"
openmls_traits = "0.5.0"
rusqlite = { version = "0.35", features = ["bundled-sqlcipher-vendored-openssl"] }
serde_json = "1.0"
thiserror = "2"
zeroize = { version = "1.8.2", features = ["derive"] }

[dev-dependencies]
# External dependencies (sorted)
serde = { version = "1.0", features = ["derive"] }
tempfile = "3"
