[package]
name = "client-ffi"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "generate-headers"
required-features = ["headers"]

[dependencies]
# Workspace dependencies (sorted)
libchat = { workspace = true }
logos-chat = { workspace = true }

# External dependencies (sorted)
safer-ffi = "0.1.13"

[features]
headers = ["safer-ffi/headers"]
