[package]
name = "logos-chat"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[features]
embedded-p2p-delivery = ["components/embedded_p2p_delivery"]

[dependencies]
# Workspace dependencies (sorted)
chat-sqlite = { workspace = true }
components = { workspace = true }
crossbeam-channel = { workspace = true }
crypto = { workspace = true }
libchat = { workspace = true }
storage = { workspace = true }
logos-account = { workspace = true, features = ["dev"]}
shared-traits = { workspace =  true }

# External dependencies (sorted)
hex = "0.4.3"
parking_lot = "0.12"
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
# External dependencies (sorted)
tempfile = "3"
