[package]
name = "logos-chat"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[dependencies]
# Workspace dependencies (sorted)
components = { workspace = true }
crossbeam-channel = { workspace = true }
embedded-logos-delivery = { workspace = true }
libchat = { workspace = true }
logos-account = { workspace = true, features = ["dev"] }
logos-generic-chat = { workspace = true }
