[package]
name = "components"
version = "0.1.0"
edition = "2024"

[features]
embedded_p2p_delivery = []

[dependencies]
# Workspace dependencies (sorted)
crypto = { workspace = true }
libchat = { workspace = true }
storage = { workspace = true }

# External dependencies (sorted)
base64 = "0.22"
crossbeam-channel = { workspace = true }
hex = "0.4.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tracing = "0.1"
