[package]
name = "components"
version = "0.1.0"
edition = "2024"

[dependencies]
# Workspace dependencies (sorted)
crypto = { workspace = true }
libchat = { workspace = true }
logos-account = { workspace = true }
storage = { workspace = true }

# External dependencies (sorted)
base64 = "0.22"
chat-proto = { workspace = true }
crossbeam-channel = { workspace = true }
hex = "0.4.3"
prost = "0.14.1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
