[package]
name = "embedded-logos-delivery"
version = "0.1.0"
edition = "2024"

[dependencies]
# Workspace dependencies (sorted)
base64 = { workspace = true }
crossbeam-channel = { workspace = true }
libchat = { workspace = true }
logos-generic-chat = { workspace = true }
waku-bindings = { workspace = true }

# External dependencies (sorted)
serde_json = "1.0"
thiserror = "2"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
